--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@openzeppelin/contracts": "^5.0.1",
     "@openzeppelin/hardhat-upgrades": "^3.0.2",
+    "ethers": "5.7",
     "hardhat": "^2.19.4"
   }
 }
