--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "connectkit": "^1.6.0",
+    "connectkit-next-siwe": "^0.2.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "siwe": "^2.1.4",
     "viem": "^1.21.4",
     "wagmi": "^1.4.13"
   },
