--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@nextui-org/table": "^2.0.28",
     "connectkit": "^1.6.0",
     "connectkit-next-siwe": "^0.2.0",
     "next": "14.0.4",
